--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
 
     <br>
 
-    <label for="diceSides">Dice Sides (d):</label>
+    <input type="number" id="numDice" value="1" min="1" max="50">
+    <label for="diceSides">d</label>
     <input type="number" id="diceSides" value="20" min="2" max="100">
 
-    <label for="numDice">Number of Dice:</label>
-    <input type="number" id="numDice" value="1" min="1" max="20">
-
-    <label for="sims">Number of Simulations:</label>
-    <input type="number" id="numSims" value="1000000" min="1" max="1000000000">
+    <br>
+    <label for="sims">Simulations:</label>
+    <input type="number" id="numSims" value="1000000" min="1" max="100000000">
 
     <button id="runSimulation">Run Simulation</button>
 
